# alglib

./: .gitignore  CMakeLists.txt  README.md  generate_symbols.py  optimizer_symbols.def
Adept/: CMakeLists.txt  adept_symbols.def
CppAD/cppad/local/: define.hpp  optimize.hpp
CppAD/example/: rev_sparse_hes.cpp
CppAD/example/atomic/: for_sparse_hes.cpp  forward.cpp
Eigen/lib/cmake/eigen3/: Eigen3Config.cmake
alglib/: CMakeLists.txt  alglib_symbols.def
data/: 20160303_100.csv  20160303_200.csv
examples/: CMakeLists.txt
examples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
examples/Optimization/: CMakeLists.txt  CostCalculator_adept.cpp  CostCalculator_adept.hpp  CostCalculator_analytic.cpp  CostCalculator_analytic.hpp  CostCalculator_cppad.cpp  CostCalculator_cppad.hpp  CostCalculator_cuda.cpp  CostCalculator_cuda.hpp  CostCalculator_eigen.cpp  CostCalculator_eigen.hpp  CostCalculator_eigen_cons.cpp  CostCalculator_eigen_cons.hpp  CostCalculator_fd.cpp  CostCalculator_fd.hpp  Optimization.cpp  ParameterReader.cpp  ParameterReader.hpp  adept.cpp  config.h  ipopt_optimizer.cpp  ipopt_optimizer.hpp  types.hpp  utilities.cpp  utilities.hpp
examples/ipopt_example/: CMakeLists.txt  TestProblem.cpp  TestProblem.hpp  example.cpp  types.hpp
examples/optimizerTest/: CMakeLists.txt  ParameterReader.cpp  ParameterReader.hpp  optimizerTest.cpp  types.hpp  utilities.cpp  utilities.hpp
examples/testEigen/: CMakeLists.txt  testEigen.cpp
ipopt/lib/x64/: IpOptFSS.lib  Ipopt-vc8.lib  libhsl.lib
ipopt/lib/x64_mkl/: IpOptFSS.lib  Ipopt-vc8.lib  libhsl.lib  libiomp5md.lib
matlab/: CostCalculator.m  createConstraints.m  cvxoptimize.m  doOptimization.m  paramaterReader.m
matlab/dll/: alglib.lib  optimizer.hpp  optimizer.lib  portfolioOptimizer.m
matlab/mingw/: optimizer.hpp  portfolioOptimizer.m  testPortfolio.m  testPortfolioOptimizer.m
matlab/msvc/: CostCalculator.m  README.html  README.md  argumentChecker.asv  argumentChecker.m  createConstraints.m  example_101.m  example_102.m  example_perf.m  optimizer.hpp  paramaterReader.m  portOpt.c  portfolioOptimizer.m  portfolioOptimizerCuda.m  setStopCondition.m  testPortfolioOptimizer.m
matlab/msvc/lib/: argumentChecker.m  optimizer.hpp  paramaterReader.m  portfolioOptimizer.m  portfolioOptimizerWithTradingCostBudget.m  setStopCondition.m
optimizer/: CMakeLists.txt  costcalculator.cpp  costcalculator.hpp  ipopt_optimizer.cpp  ipopt_optimizer.hpp  optimizer.cpp  optimizer.hpp  types.hpp
