if(WIN32)
    include_directories("C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v7.5/include")
    LINK_DIRECTORIES("C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v7.5/lib/x64")
else()
    include_directories(/usr/local/cuda-7.5/include)
    LINK_DIRECTORIES(/usr/local/cuda-7.5/lib64)
endif()

if(${CMAKE_USE_MKL_LIB} STREQUAL "TRUE")
    add_definitions(-DUSE_MKL_LIB)
endif()

file(GLOB OPTIMIZATION_FILES "*.hpp" "*.cpp")
add_executable(Optimization ${OPTIMIZATION_FILES})
target_link_libraries(Optimization alglib)

target_link_libraries(Optimization cublas)
target_link_libraries(Optimization cudart)

if(${CMAKE_USE_MKL_LIB} STREQUAL "TRUE")
    if(${BUILD_SHARED_LIB} STREQUAL "1")
        target_link_libraries(Optimization mkl_intel_ilp64_dll.lib)
        target_link_libraries(Optimization mkl_core_dll.lib)
        target_link_libraries(Optimization mkl_intel_thread_dll.lib)
        target_link_libraries(Optimization libiomp5md.lib)
    else()
        target_link_libraries(Optimization mkl_intel_ilp64.lib)
        target_link_libraries(Optimization mkl_core.lib)
        target_link_libraries(Optimization mkl_intel_thread.lib)
        target_link_libraries(Optimization libiomp5md.lib)
    endif()
endif()